--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+<meta name="google-site-verification" content="FGy2n5P0G-tK8x5hjMs3h9X72VnWz4VQJzrUNesnFOI" />
 <link rel="stylesheet" href="styles.34c57ab7888ec1573f9c.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.3d56822ac826c5b948ce.js"></script></body>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124219285-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-124219285-1');
+</script>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.d83369c94742b755f721.js"></script></body>
 </html>
