--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+      content="Use this portal to share your location and get help seamlessly. You can request food, water, shelter, clothes and other necessities through this portal. No sound should be unheard. Let's stand together and help our brothers and sisters"/>
+<link rel="canonical" href="https://www.savekerala.xyz"/>
+<meta property="og:locale" content="en_US"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="Kerala Flood rescue portal - #savekerala.xyz"/>
+<meta property="og:description"
+      content="Use this portal to share urgent helps and participate the #savekerala initiative"/>
+<meta property="og:url" content="https://savekerala.xyz/"/>
+<meta property="og:site_name" content="SaveKerala.xyz"/>
   <link rel="icon" type="image/x-icon" href="./assets/ICON.jpg">
 
   <!-- Latest compiled and minified CSS -->
@@ -26,5 +36,5 @@
 
   gtag('config', 'UA-124219285-1');
 </script>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.7b133fb6a3cafaf412c5.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.b17e48946159e8ce78c3.js"></script></body>
 </html>
